[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/entities/levelObjects/bird_killer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/fight_zone.gd" type="Script" id=2]
[ext_resource path="res://scenes/entities/levelObjects/fight_mode_init.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/fight-start.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/fight-win.wav" type="AudioStream" id=5]

[node name="fight_zone" type="Node2D"]
script = ExtResource( 2 )

[node name="fight_mode_init" parent="." instance=ExtResource( 3 )]
__meta__ = {
"_editor_description_": "When the user enters this area, the fighting mode starts.
It will end when the player kills al the enemies linked to this object."
}

[node name="bird_killer" parent="." instance=ExtResource( 1 )]

[node name="win_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="start_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="enemies" type="Node" parent="."]

[node name="new_spawnpoint" type="Position2D" parent="."]

[connection signal="body_entered" from="fight_mode_init" to="." method="_on_fight_mode_init_body_entered"]
[connection signal="child_exiting_tree" from="enemies" to="." method="_on_enemies_child_exiting_tree"]
